fix bug for z-index owl carousel view

--- a/public/css/owl.carousel.css
+++ b/public/css/owl.carousel.css
@@ -8,12 +8,13 @@
  */
 
 .owl-carousel {
+    z-index: 0;
   display: none;
   width: 100%;
   -webkit-tap-highlight-color: transparent;
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
-  z-index: 1; }
+  }
   .owl-carousel .owl-stage {
     position: relative;
     -ms-touch-action: pan-Y;
